--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -35,6 +35,11 @@ volume = {69},
 year = {2020}
 }
 
+@unpublished{Easter6,
+title = {{Investigation of SARS-CoV-2 Outbreaks in Six Care Homes in London: The Easter 6 Care Home Investigation}},
+year = 2020,
+author= {Shamez Ladhani and Maria Zambon and Nandini Shetty and Meera Chand and Richard Myers and Mark Driver and Gwyn Morris and Lynne Foster and Kevin Brown and Mary Ramsay and Susan Hopkins and Yimmy Chow and Edward Wynne-Evans and Anita Bell and Emma Crawley-Boevey and Jonathan Fok and Roshni Janarthanan and Amoolya Vusirikala and Elena Fernandez and Marina Sanchez Perez and Suzanne Tang and Kate Dun-Campbell and Karthik Paranthaman and Thomas Ma and Maria Saavedra-Campos and Alex Allen}}
+
 
 @article{Graham2020,
 title = {{SARS-CoV-2 infection, clinical features and outcome of COVID-19 in United Kingdom nursing homes}},
@@ -98,6 +103,19 @@ title = {{Variation in False-Negative Rate of Reverse Transcriptase Polymerase C
 year = {2020}
 }
 
+@article {Lai2020,
+	author = {Lai, Alvina G and Pasea, Laura and Banerjee, Amitava and Denaxas, Spiros and Katsoulis, Michail and Chang, Wai Hoong and Williams, Bryan and Pillay, Deenan and Noursadeghi, Mahdad and Linch, David and Hughes, Derralynn and Forster, Martin D and Turnbull, Clare and Fitzpatrick, Natalie K and Boyd, Kathryn and Foster, Graham R and Cooper, Matt and Jones, Monica and Pritchard-Jones, Kathy and Sullivan, Richard and Hall, Geoff and Davie, Charlie and Lawler, Mark and Hemingway, Harry},
+	title = {Estimating excess mortality in people with cancer and multimorbidity in the COVID-19 emergency},
+	elocation-id = {2020.05.27.20083287},
+	year = {2020},
+	doi = {10.1101/2020.05.27.20083287},
+	publisher = {Cold Spring Harbor Laboratory Press},
+	URL = {https://www.medrxiv.org/content/early/2020/06/01/2020.05.27.20083287},
+	eprint = {https://www.medrxiv.org/content/early/2020/06/01/2020.05.27.20083287.full.pdf},
+	journal = {medRxiv}
+}
+
+
 @article{McMichael2020,
 author = {McMichael, Temet M. and Currie, Dustin W. and Clark, Shauna and Pogosjans, Sargis and Kay, Meagan and Schwartz, Noah G. and Lewis, James and Baer, Atar and Kawakami, Vance and Lukoff, Margaret D. and Ferro, Jessica and Brostrom-Smith, Claire and Rea, Thomas D. and Sayre, Michael R. and Riedo, Francis X. and Russell, Denny and Hiatt, Brian and Montgomery, Patricia and Rao, Agam K. and Chow, Eric J. and Tobolowsky, Farrell and Hughes, Michael J. and Bardossy, Ana C. and Oakley, Lisa P. and Jacobs, Jesica R. and Stone, Nimalie D. and Reddy, Sujan C. and Jernigan, John A. and Honein, Margaret A. and Clark, Thomas A. and Duchin, Jeffrey S.},
 title = {{Epidemiology of Covid-19 in a Long-Term Care Facility in King County, Washington}},
@@ -135,6 +153,21 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.3022},
 year = {2008}
 }
 
+@article{Smith2020,
+author = {Smith, Catherine M. and Williams, Haydn and Jhass, Arnoupe and Patel, Selina and Crayton, Elise and Lorencatto, Fabiana and Michie, Susan and Hayward, Andrew C. and Shallcross, Laura J.},
+doi = {10.1186/s12913-020-05422-z},
+issn = {1472-6963},
+journal = {BMC Health Services Research},
+month = {dec},
+number = {1},
+pages = {555},
+title = {{Antibiotic prescribing in UK care homes 2016–2017: retrospective cohort study of linked data}},
+url = {https://bmchealthservres.biomedcentral.com/articles/10.1186/s12913-020-05422-z},
+volume = {20},
+year = {2020}
+}
+
+
 @article {Stall2020,
 	author = {Stall, Nathan M. and Jones, Aaron and Brown, Kevin A and Rochon, Paula A and Costa, Andrew P},
 	title = {{For-profit nursing homes and the risk of COVID-19 outbreaks and resident deaths in Ontario, Canada}},
@@ -145,6 +178,16 @@ year = {2008}
 	journal = {medRxiv}
 }
 
+@article{Weinberger2020,
+    author = {Weinberger, Daniel M. and Chen, Jenny and Cohen, Ted and Crawford, Forrest W. and Mostashari, Farzad and Olson, Don and Pitzer, Virginia E. and Reich, Nicholas G. and Russi, Marcus and Simonsen, Lone and Watkins, Anne and Viboud, Cecile},
+    title = "{Estimation of Excess Deaths Associated With the COVID-19 Pandemic in the United States, March to May 2020}",
+    journal = {JAMA Internal Medicine},
+    year = {2020},
+    month = {07},
+    issn = {2168-6106},
+    doi = {10.1001/jamainternmed.2020.3391},
+    url = {https://doi.org/10.1001/jamainternmed.2020.3391}
+}
 
 @article{Zhou2020,
 author = {Zhou, Fei and Yu, Ting and Du, Ronghui and Fan, Guohui and Liu, Ying and Liu, Zhibo and Xiang, Jie and Wang, Yeming and Song, Bin and Gu, Xiaoying and Guan, Lulu and Wei, Yuan and Li, Hui and Wu, Xudong and Xu, Jiuyang and Tu, Shengjin and Zhang, Yi and Chen, Hua and Cao, Bin},
@@ -160,6 +203,15 @@ year = {2020}
 }
 
 # Reports
+
+
+@misc{bbc2020,
+year = 2020,
+author = {{BBC News}},
+title = {{Coronavirus: The world in lockdown in maps and charts}},
+url = {https://www.bbc.co.uk/news/world-52103747},
+note = {Accessed 2020-07-12}
+}
 
 @report{dhICguideline2020,
 year = 2020,
@@ -198,6 +250,13 @@ url = {https://www.gov.uk/government/news/regular-retesting-rolled-out-for-care-
 note = {Accessed: 2020-07-05}
 }
 
+@website{ECDC2020,
+author = {{European Centre for Disease Prevention and Control}},
+year = 2020,
+title = {COVID-19 situation update for the EU/EEA and the UK, as of 10 July 2020},
+url = {https://web.archive.org/web/20200710104730/https://www.ecdc.europa.eu/en/cases-2019-ncov-eueea}
+}
+
 @misc{hscni2020,
 author = {{Northern Ireland Health and Social Care Board}},
 title = {{Coronavirus (COVID-19) Care Homes - Surge Plan and Frequently Asked Questions}},
@@ -230,6 +289,14 @@ title = {{Deaths involving COVID-19 in the care sector, England and Wales: death
 url = {https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/articles/deathsinvolvingcovid19inthecaresectorenglandandwales/deathsoccurringupto12june2020andregisteredupto20june2020provisional},
 note = {Accessed: 2020-07-05}}
 
+@report{onsDR2020occ,
+author = {{England Office for National Statistics}},
+year = 2020,
+title = {{Coronavirus (COVID-19) related deaths by occupation, England and Wales: deaths registered between 9 March and 25 May 2020}},
+url = {https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/causesofdeath/bulletins/coronaviruscovid19relateddeathsbyoccupationenglandandwales/deathsregisteredbetween9marchand25may2020},
+note = {Accessed: 2020-07-11}}
+
+
 @website{CQC2020stats,
 author = {{England Care Quality Commission}}},
 year = 2020,
@@ -250,9 +317,25 @@ author = {Hale, Thomas and Sam Webster and Anna Petherick and Toby Phillips and 
 year = 2020,
 title = {{Oxford COVID-19 Government Response Tracker, Blavatnik School of Government}},
 url = {https://www.bsg.ox.ac.uk/research/research-projects/coronavirus-government-response-tracker},
-note = {Accessed: 2020-07-05}}
-
+note = {Accessed: 2020-07-05}
 }
+
+@misc{PHE2020,
+author = {{Public Health England}},
+title = {{COVID-19: Number of outbreaks in care homes – management information}},
+year = 2020,
+url = {https://www.gov.uk/government/statistical-data-sets/covid-19-number-of-outbreaks-in-care-homes-management-information},
+note = {Accessed: 2020-07-11}
+}
+
+
+@misc{LaingBuisson2019,
+author = {{LaingBuisson}},
+year = 2019,
+title = {{Care of Older People UK Market Report 30th Edition}},
+url = {https://www.laingbuisson.com/}
+}
+
 # Software
 
 @misc{Dutey2020,
