--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -339,10 +339,10 @@ url = {https://www.laingbuisson.com/}
 # Software
 
 @misc{Dutey2020,
- title={{Incidence and period prevalence of Covid-19 cases in care home staff and residents at Four Seasons Health Care (England, Scotland, Northern Ireland)}},
+ title={{Covid-19 infection and attributable mortality in residents of UK care homes: Cohort study using electronic records (March-June 2020)}},
  url={https://github.com/peterdutey/ch-covid19},
  publisher={Code repository},
- author={Dutey-Magni, Peter},
+ author={Dutey-Magni, Peter and Shallcross, Laura},
  year={2020}
 }
 
