--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -339,7 +339,7 @@ url = {https://www.laingbuisson.com/}
 # Software
 
 @misc{Dutey2020,
- title={{Covid-19 infection and attributable mortality in residents of UK care homes: Cohort study using electronic records (March-June 2020)}},
+ title={{Covid-19 infection and attributable mortality in UK long term care facilities: Cohort study using active surveillance and electronic records (March-June 2020)}},
  url={https://github.com/peterdutey/ch-covid19},
  publisher={Code repository},
  author={Dutey-Magni, Peter and Shallcross, Laura},
