--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Covid-19 infection and attributable mortality in residents of UK care homes: Cohort study using electronic records (March-June 2020)"
+title: "Covid-19 infection and attributable mortality in UK long term care facilities: Cohort study using active surveillance and electronic records (March-June 2020)"
 bibliography: references.bib
 csl: sage-vancouver.csl
 output:
@@ -1603,6 +1603,10 @@ This work was supported by the Economic and Social Research Council [ES/V003887/
 ## Research ethics
 
 This study was approved by the University College London Research Ethics Committee (project reference 13355/002).
+
+## Availability of data and materials
+
+Figure 2 and 3 data are available on request to authors. This work uses data provided by residents and collected by the Four Seasons Health Care Group as part of their care and support. These are available from the Four Seasons Health Care Group but restrictions apply to the availability of these data, which were used under license for the current study, and so are not publicly available. Data are however available from the authors upon reasonable request and with permission of the Four Seasons Health Care Group.
 
 
 # Supplementary material
